--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,3 +13,5 @@ workflows:
     # Run the welcome/run job in its own container
     jobs:
       - welcome/run
+      - npm install
+      - npm start src/index.js
