--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
+    "express-swagger-generator": "^1.1.15",
     "nodemon": "^1.19.1"
   },
   "dependencies": {
