--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mysql2": "^1.6.5",
+    "node-fetch": "^2.6.0",
     "nodemailer": "^6.1.1",
     "pg": "^7.11.0",
     "sequelize": "^5.7.5",
